hphp/hack/test/typecheck/reactive/rx_class3.php
<?hh // partial

<<__RxLocal>>
trait A {
}
